module(
    name = "custom_registry",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_oci", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.42.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.46.0", dev_dependency = True, repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True)

bazel_dep(name = "container_structure_test", version = "1.16.0")

register_toolchains("//registry:registry_toolchain")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_containerregistry",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    image = "https://index.docker.io/library/debian",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    # Don't make a debian_unpinned repo and print a warning about the tag
    reproducible = False,
    tag = "latest",
)
use_repo(oci, "debian")
