load("@aspect_bazel_lib//lib:bats.bzl", "bats_test")

[
    bats_test(
        name = "test_%s" % name,
        size = "large",
        srcs = [
            "test.bats",
        ],
        env = {
            "WKSP": "$(location :wksp)",
            "REGISTRY": "$(rootpath //registry:auth)",
            "BAZEL_FLAGS": flags
        },
        args = [
            "--verbose-run",
            "--timing",
            "--trace"
        ],
        data = glob(["credential-helper/**"]) + ["wksp", "//registry:auth"],
        tags = [
            "local",
            "exclusive",
            "no-remote",
            "no-remote-exec"
        ]
    )
    for (name, flags) in [
        ("bzlmod", "--noenable_bzlmod"), 
        ("nobzlmod", "--enable_bzlmod")
    ]
]
