"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
archive_override(
    module_name = "aspect_bazel_lib",
    integrity = "sha256-raT3Dnx1rGi9HhpY/zgGNAcxi4LHCNdhZwDl6sQkuSQ=",
    strip_prefix = "bazel-lib-d042d563c6a91f7e11f66c42c83429199bd3d5d9",
    urls = ["https://github.com/bazel-contrib/bazel-lib/archive/d042d563c6a91f7e11f66c42c83429199bd3d5d9.zip"],  # 11 Dec 2024
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_oci", version = "0.0.0")
bazel_dep(name = "container_structure_test", version = "1.15.0")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64")
