bazel_dep(name = "rules_oci", version = "0.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_rust", version = "0.45.1")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")

local_path_override(
    module_name = "rules_oci",
    path = "../..",
)
