load("//oci:defs.bzl", "oci_image", "oci_structure_test")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "app",
    srcs = ["test.bash"],
)

oci_image(
    name = "image",
    architecture = select({
        "@platforms//cpu:arm64": "arm64",
        "@platforms//cpu:x86_64": "amd64",
    }),
    base = "//example:base",
    cmd = ["test.sh"],
    env = {
        "ENV1": "$PATH:/test",
        "ENV2": "/prepend:${PATH}:/test2",
    },
    os = "linux",
    tars = ["app.tar"],
)

oci_structure_test(
    name = "test",
    config = ["test.yaml"],
    image = ":image",
)
